package com.data_management;

import java.io.IOException;
import java.nio.file.Files;
import java.nio.file.Path;
import java.nio.file.Paths;
import java.util.List;
import java.util.regex.Matcher;
import java.util.regex.Pattern;
import java.util.stream.Collectors;
import java.util.stream.Stream;

/**
 * Reads file output produced by the health data simulator and imports it into
 * {@link DataStorage}.
 * The expected line format is:
 * {@code Patient ID: 1, Timestamp: 1714376789050, Label: ECG, Data: 0.25}.
 */
public class FileDataReader implements DataReader {
    private static final Pattern OUTPUT_LINE_PATTERN = Pattern.compile(
            "Patient ID:\\s*(\\d+),\\s*Timestamp:\\s*(\\d+),\\s*Label:\\s*([^,]+),\\s*Data:\\s*(.+)");

    private final Path directory;

    /**
     * Creates a reader for a simulator output directory.
     *
     * @param directoryPath path to the directory generated by {@code --output file:<dir>}
     */
    public FileDataReader(String directoryPath) {
        this(Paths.get(directoryPath));
    }

    /**
     * Creates a reader for a simulator output directory.
     *
     * @param directory path to the directory generated by {@code --output file:<dir>}
     */
    public FileDataReader(Path directory) {
        this.directory = directory;
    }

    /**
     * Reads all regular files in the configured directory and stores parsed records.
     * Malformed lines are skipped so one bad log entry does not prevent importing
     * the remaining data.
     *
     * @param dataStorage the storage where data will be stored
     * @throws IOException if the directory cannot be read
     */
    @Override
    public void readData(DataStorage dataStorage) throws IOException {
        if (!Files.isDirectory(directory)) {
            throw new IOException("Data source is not a directory: " + directory);
        }

        try (Stream<Path> paths = Files.walk(directory)) {
            List<Path> files = paths
                    .filter(Files::isRegularFile)
                    .sorted()
                    .collect(Collectors.toList());

            for (Path file : files) {
                readFile(file, dataStorage);
            }
        }
    }

    private void readFile(Path file, DataStorage dataStorage) throws IOException {
        for (String line : Files.readAllLines(file)) {
            ParsedRecord parsedRecord = parseLine(line);
            if (parsedRecord != null) {
                dataStorage.addPatientData(parsedRecord.patientId, parsedRecord.measurementValue,
                        parsedRecord.recordType, parsedRecord.timestamp);
            }
        }
    }

    private ParsedRecord parseLine(String line) {
        Matcher matcher = OUTPUT_LINE_PATTERN.matcher(line);
        if (!matcher.matches()) {
            return null;
        }

        try {
            int patientId = Integer.parseInt(matcher.group(1));
            long timestamp = Long.parseLong(matcher.group(2));
            String label = matcher.group(3).trim();
            double measurementValue = parseMeasurementValue(matcher.group(4).trim());
            return new ParsedRecord(patientId, timestamp, label, measurementValue);
        } catch (NumberFormatException exception) {
            return null;
        }
    }

    private double parseMeasurementValue(String rawValue) {
        if (rawValue.endsWith("%")) {
            return Double.parseDouble(rawValue.substring(0, rawValue.length() - 1));
        }
        if ("triggered".equalsIgnoreCase(rawValue)) {
            return 1.0;
        }
        if ("resolved".equalsIgnoreCase(rawValue)) {
            return 0.0;
        }
        return Double.parseDouble(rawValue);
    }

    private static class ParsedRecord {
        private final int patientId;
        private final long timestamp;
        private final String recordType;
        private final double measurementValue;

        private ParsedRecord(int patientId, long timestamp, String recordType, double measurementValue) {
            this.patientId = patientId;
            this.timestamp = timestamp;
            this.recordType = recordType;
            this.measurementValue = measurementValue;
        }
    }
}
